deployment/phpmyadmin/phpmyadmin-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
  labels:
    app: phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
        - name: phpmyadmin
          image: phpmyadmin/phpmyadmin
          resources:
           limits:
             cpu: 250m
           requests:
             cpu: 100m
             memory: 500Mi
          imagePullPolicy: Always
          ports:
            - containerPort: 80
